2008-12-08  Dodji Seketeli  <dodji@redhat.com>

	PR debug/38390
	* g++.dg/debug/dwarf2/imported-module-2.C: New test.

2008-12-08  Steve Ellcey  <sje@cup.hp.com>

	*  g++.dg/other/packed1.C: Remove ia64-hp-hpux* XFAIL.

2008-12-08  Steve Ellcey  <sje@cup.hp.com>

	* gcc.target/ia64/versionid-1.c (dg-final): Fix syntax.
	* gcc.target/ia64/versionid-2.c (dg-final): Ditto.

2008-12-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/35443
	* gcc.dg/pr35443.c: New test.

	PR c/35442
	* gcc.dg/pr35442.c: New test.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/string_comparison.adb: New test.

2008-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR tree-optimization/38405
	* gcc.dg/torture/pr38405.c: New.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/aggr10.adb: New test.
	* gnat.dg/aggr10_pkg.ads: New helper.

2008-12-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/38425
	* gfortran.dg/io_constraints_5.f90: New test.

2008-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38428
	* gcc.c-torture/compile/pr38428.c: New test.

	PR middle-end/38422
	* gcc.c-torture/execute/pr38422.c: New test.

2008-12-06  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/38415
	* gfortran.dg/proc_ptr_2.f90: Extended.
	* gfortran.dg/proc_ptr_11.f90: Modified.

2008-12-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/38291
	* gfortran.dg/streamio_16.f90: New test.

2008-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/35336
	* g++.dg/other/error30.C: New test.

2008-12-05  Janis Johnson  <janis187@us.ibm.com>

	* lib/target-supports.exp (check_effective_target_hard_dfp): New.
	* gcc.dg/dfp/convert-dfp-round.c: Skip for hard_dfp.
	* gcc.dg/dfp/fe-binop.c: Ditto.
	* gcc.dg/dfp/fe-convert-1.c: Ditto.

2008-12-05  Catherine Moore  <clm@codesourcery.com>

	* gcc-target/mips/mips-nonpic: New testsuite.

2008-12-05  Steve Ellcey  <sje@cup.hp.com>

	PR other/28614
	* gcc.c-torture/compile/20001226-1.c: Add dg-timeout-factor.
	* g++.dg/torture/pr31863.C: Ditto.